--- a/src/main/resources/templates/testResults.html
+++ b/src/main/resources/templates/testResults.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="|Welcome to Tony's Travel App. More to come! ***TESTING***|" />
+    <p th:text="|This is the test results page...|" />
 </body>
 </html>
