--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="|This is the search results page...|" />
+    <p th:text="|Origin: ${origin}|" />
+    <p th:text="|Destination: ${destination}|" />
+    <p th:text="|Departure Date: ${departureDate}|" />
+    <p th:text="|Adults: ${adults}|" />
 </body>
 </html>
