Successfully passing output data to searchResults view

--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -9,5 +9,7 @@
     <p th:text="|Destination: ${destination}|" />
     <p th:text="|Departure Date: ${departureDate}|" />
     <p th:text="|Adults: ${adults}|" />
+    <br>
+    <p th:text="|Data: ${data}"/>
 </body>
 </html>
