--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <p th:text="|Welcome to Tony's Travel App. More to come! ***TESTING***|" />
+    <select name="cities">
+       <option th:each="cities : ${cityList}" th:text="${cities}"/>
+    </select></tr>
 </body>
 </html>
