--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="|Welcome to Tony's Travel App. More to come! ***TESTING***|" />
+    <p th:text="|Welcome to Tony's Travel App!|" />
+    <p th:text="|Enter your search criteria:|" />
     <form th:action="@{/search}" method="post">
-        <select name="cities">
-            <option th:each="cities : ${cityList}" th:text="${cities}"/>
-        </select></tr>
-        <button type="submit">Submit</button>
+        <div style="display: inline-block">Flying From:
+            <div>
+               <select name="cities">
+                  <option th:each="cities : ${cityList}" th:text="${cities}"/>
+               </select>
+            </div>
+        </div>
+        <div style="display: inline-block">Flying To:
+            <div>
+               <select name="cities">
+                  <option th:each="cities : ${cityList}" th:text="${cities}"/>
+               </select>
+            </div>
+        </div>
+        <div style="display: inline-block">
+           <button type="submit">Submit</button>
+        </div>
     </form>
 </body>
 </html>
