Successfully calling Amadeus API using form data. Needs parsing.

--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -6,8 +6,8 @@
 </head>
 <body style="background-color: #f0f4c3">
     <form th:action="@{/search}" th:object=${trip}>
-        <h3 align="center">Data from the form</h3>
-        <div style="font-size: large;" align="center" th:text=${getdata}></div>
+        <!-- <div style="font-size: large;" align="center" th:text=${getdata}></div> -->
+        <div style="font-size: large;" align="center" th:text=${response}></div>
         </div>
     </form>
 </body>
